--- a/Desktop/web design/Portfolio/Css/style.css
+++ b/Desktop/web design/Portfolio/Css/style.css
@@ -2,7 +2,7 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 .banner{
-    background-image: url(/Portfolio/image/slider.jpg);
+    background-image: url(../image/slider.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     padding: 250px 0;
